--- a/main.html
+++ b/main.html
@@ -8,7 +8,29 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+    <h1>Heading 1</h1>
+	
+	
+	
+	<nav role="navigation">
+          <ul>
+		      <li><a href="#home">Home</a></li>
+		      <li><a href="#about">About</a></li>
+			  <li><a href="#services">Services</a></li>
+			  <li><a href="#contact">Contact</a></li>
+     	</ul>
+
+		
+	</nav>
+
+	<img src="https://images.unsplash.com/photo-1749916883754-a7b3fc88d4a7?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" id="home">Home</img>
+    <p id="about">lorem10</p>
+	<p id="services">Head massage, pedicure, manicure</p>
+	<p id="contact">9876543210</p>
+	
+	
+	
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
