--- a/main.html
+++ b/main.html
@@ -24,9 +24,9 @@
 	</nav>
 
 	<img src="https://images.unsplash.com/photo-1749916883754-a7b3fc88d4a7?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" id="home" role="img">Home</img>
-    <p id="about">lorem10</p>
-	<p id="services">Head massage, pedicure, manicure</p>
-	<p id="contact">9876543210</p>
+    <p id="about" role="paragraph">lorem10</p>
+	<p id="services" role="paragraph">Head massage, pedicure, manicure</p>
+	<p id="contact" role="paragraph">9876543210</p>
 	
 	
 	
