--- a/main.html
+++ b/main.html
@@ -8,16 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <h1>Heading 1</h1>
+    <h1 role="heading">Heading 1</h1>
 	
 	
 	
 	<nav role="navigation">
-          <ul>
-		      <li><a href="#home">Home</a></li>
-		      <li><a href="#about">About</a></li>
-			  <li><a href="#services">Services</a></li>
-			  <li><a href="#contact">Contact</a></li>
+          <ul role="list">
+		      <li role="listitem"><a href="#home">Home</a></li>
+		      <li role="listitem"><a href="#about">About</a></li>
+			  <li role="listitem"><a href="#services">Services</a></li>
+			  <li role="listitem"><a href="#contact">Contact</a></li>
      	</ul>
 
 		
